[gd_scene load_steps=5 format=3 uid="uid://cylfujnjhaexj"]

[ext_resource type="Texture2D" uid="uid://b0fjwd85b8wqd" path="res://art/splash.png" id="1_jrigd"]
[ext_resource type="Script" path="res://levels/splash.gd" id="1_km572"]
[ext_resource type="Texture2D" uid="uid://c3bxmwosm6a4a" path="res://art/background.png" id="1_lsiv4"]
[ext_resource type="PackedScene" uid="uid://cpi8ktierddsl" path="res://characters/player.tscn" id="2_8u8n4"]

[node name="Splash" type="Node2D"]
script = ExtResource("1_km572")
player_scene = ExtResource("2_8u8n4")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_lsiv4")

[node name="Splash" type="Sprite2D" parent="."]
position = Vector2(0, -100)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_jrigd")

[node name="SplashCamera" type="Camera2D" parent="."]

[node name="Join" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 55.0
offset_right = 169.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Join"

[node name="Quit" type="Button" parent="."]
offset_left = -165.0
offset_top = 105.0
offset_right = 169.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="PlayerName" type="LineEdit" parent="."]
offset_left = -62.0
offset_top = 14.0
offset_right = 166.0
offset_bottom = 45.0

[node name="PlayerNameLabel" type="Label" parent="."]
offset_left = -165.0
offset_top = 16.0
offset_right = -68.0
offset_bottom = 42.0
text = "Player name"

[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
